[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/MetaData.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Stage3.gd" type="Script" id=2]
[ext_resource path="res://images/pic6s.png" type="Texture" id=3]
[ext_resource path="res://images/pic5.png" type="Texture" id=4]
[ext_resource path="res://images/Stage3.jpg" type="Texture" id=5]
[ext_resource path="res://images/pic5s.png" type="Texture" id=6]
[ext_resource path="res://images/pic6.png" type="Texture" id=7]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=8]
[ext_resource path="res://themes/intro_theme.tres" type="Theme" id=9]
[ext_resource path="res://themes/button_theme.tres" type="Theme" id=10]
[ext_resource path="res://themes/hint_theme.tres" type="Theme" id=11]

[node name="Stage" type="Control"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 70.0
margin_right = 1270.0
margin_bottom = 540.0

[node name="StageImage" type="TextureRect" parent="MarginContainer"]
margin_right = 1270.0
margin_bottom = 540.0
texture = ExtResource( 5 )

[node name="Thing1Found" type="TextureButton" parent="MarginContainer/StageImage"]
margin_left = 168.0
margin_top = 194.0
margin_right = 272.0
margin_bottom = 250.0

[node name="Thing2Found" type="TextureButton" parent="MarginContainer/StageImage"]
margin_left = 176.0
margin_top = 274.0
margin_right = 216.0
margin_bottom = 314.0

[node name="MetaData" type="Label" parent="MarginContainer/StageImage"]
margin_left = 768.0
margin_top = 482.0
margin_right = 1236.0
margin_bottom = 507.0
custom_colors/font_color = Color( 0.894118, 0.890196, 0.823529, 1 )
custom_fonts/font = ExtResource( 1 )
text = "The Red Boat in Lake Nanhu"

[node name="HintDialog" type="Panel" parent="."]
margin_left = 48.0
margin_top = 640.0
margin_right = 680.0
margin_bottom = 696.0
theme = ExtResource( 9 )

[node name="Label" type="Label" parent="HintDialog"]
margin_top = 8.0
margin_right = 632.0
margin_bottom = 44.0
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HINTTEXT"
align = 1

[node name="TextureRect" type="TextureRect" parent="HintDialog"]
margin_left = 592.0
margin_top = -72.0
margin_right = 692.0
margin_bottom = 28.0
rect_rotation = 10.0
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="HintDialog"]
margin_left = 624.0
margin_top = -16.0
margin_right = 724.0
margin_bottom = 84.0
rect_rotation = 15.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Thing1Dialog" type="Panel" parent="."]
margin_left = 328.0
margin_top = 240.0
margin_right = 1144.0
margin_bottom = 384.0
theme = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="Thing1Dialog"]
margin_left = 24.0
margin_right = 800.0
margin_bottom = 136.0

[node name="VBoxContainer" type="VBoxContainer" parent="Thing1Dialog/MarginContainer"]
margin_right = 776.0
margin_bottom = 136.0
alignment = 1

[node name="ThingText" type="Label" parent="Thing1Dialog/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 776.0
margin_bottom = 59.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAGE3TEXT1"

[node name="HBoxContainer" type="HBoxContainer" parent="Thing1Dialog/MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 776.0
margin_bottom = 109.0
alignment = 2

[node name="ThingCheckButton" type="Button" parent="Thing1Dialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 652.0
margin_right = 776.0
margin_bottom = 46.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "ACQUIRE"

[node name="ThingPic" type="TextureRect" parent="Thing1Dialog"]
margin_left = -64.0
margin_top = -72.0
margin_right = 36.0
margin_bottom = 28.0
texture = ExtResource( 7 )

[node name="Thing2Dialog" type="Panel" parent="."]
margin_left = 280.0
margin_top = 400.0
margin_right = 888.0
margin_bottom = 592.0
theme = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="Thing2Dialog"]
margin_left = 24.0
margin_right = 584.0
margin_bottom = 184.0

[node name="VBoxContainer" type="VBoxContainer" parent="Thing2Dialog/MarginContainer"]
margin_right = 560.0
margin_bottom = 184.0
alignment = 1

[node name="ThingText" type="Label" parent="Thing2Dialog/MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 560.0
margin_bottom = 83.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAGE3TEXT2"

[node name="HBoxContainer" type="HBoxContainer" parent="Thing2Dialog/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 560.0
margin_bottom = 133.0
alignment = 2

[node name="ThingCheckButton" type="Button" parent="Thing2Dialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 560.0
margin_bottom = 46.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "ACQUIRE"

[node name="ThingPic" type="TextureRect" parent="Thing2Dialog"]
margin_left = -48.0
margin_top = -72.0
margin_right = 52.0
margin_bottom = 28.0
texture = ExtResource( 4 )

[node name="Thing1Sign" type="TextureRect" parent="."]
margin_left = 1088.0
margin_top = 600.0
margin_right = 1192.0
margin_bottom = 700.0
rect_rotation = 20.0
texture = ExtResource( 3 )

[node name="Thing2Sign" type="TextureRect" parent="."]
margin_left = 1176.0
margin_top = 600.0
margin_right = 1276.0
margin_bottom = 700.0
rect_rotation = 20.0
texture = ExtResource( 6 )

[node name="StageQuestions" type="ColorRect" parent="."]
visible = false
margin_right = 1270.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.588235 )

[node name="Panel" type="Panel" parent="StageQuestions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -353.0
margin_top = -147.5
margin_right = 353.0
margin_bottom = 147.5
theme = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="StageQuestions/Panel"]
margin_left = 34.0
margin_top = 13.0
margin_right = 674.0
margin_bottom = 292.0

[node name="Title" type="Label" parent="StageQuestions/Panel/VBoxContainer"]
margin_right = 640.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "QUESTION"
align = 1

[node name="Questions" type="Label" parent="StageQuestions/Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 640.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAGE3QUESTION1"

[node name="HBoxContainer" type="HBoxContainer" parent="StageQuestions/Panel/VBoxContainer"]
margin_top = 89.0
margin_right = 640.0
margin_bottom = 127.0

[node name="Label" type="Label" parent="StageQuestions/Panel/VBoxContainer/HBoxContainer"]
margin_right = 129.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QLABEL"

[node name="LineEdit" type="LineEdit" parent="StageQuestions/Panel/VBoxContainer/HBoxContainer"]
margin_left = 133.0
margin_right = 640.0
margin_bottom = 38.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_colors/selection_color = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )

[node name="Questions2" type="Label" parent="StageQuestions/Panel/VBoxContainer"]
margin_top = 131.0
margin_right = 640.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STAGE3QUESTION2"

[node name="HBoxContainer2" type="HBoxContainer" parent="StageQuestions/Panel/VBoxContainer"]
margin_top = 172.0
margin_right = 640.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="StageQuestions/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 129.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QLABEL"

[node name="LineEdit" type="LineEdit" parent="StageQuestions/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 133.0
margin_right = 640.0
margin_bottom = 38.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_colors/selection_color = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="StageQuestions/Panel/VBoxContainer"]
margin_top = 214.0
margin_right = 640.0
margin_bottom = 260.0
alignment = 2

[node name="ButtonBack" type="Button" parent="StageQuestions/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 388.0
margin_right = 512.0
margin_bottom = 46.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 10 )
text = "QBUTTON1"

[node name="ButtonNext" type="Button" parent="StageQuestions/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 516.0
margin_right = 640.0
margin_bottom = 46.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 10 )
text = "QBUTTON2"

[connection signal="pressed" from="MarginContainer/StageImage/Thing1Found" to="." method="_on_Thing1Found_pressed"]
[connection signal="pressed" from="MarginContainer/StageImage/Thing2Found" to="." method="_on_Thing2Found_pressed"]
[connection signal="pressed" from="Thing1Dialog/MarginContainer/VBoxContainer/HBoxContainer/ThingCheckButton" to="." method="_on_Thing1CheckButton_pressed"]
[connection signal="pressed" from="Thing2Dialog/MarginContainer/VBoxContainer/HBoxContainer/ThingCheckButton" to="." method="_on_Thing2CheckButton_pressed"]
[connection signal="pressed" from="StageQuestions/Panel/VBoxContainer/HBoxContainer3/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="StageQuestions/Panel/VBoxContainer/HBoxContainer3/ButtonNext" to="." method="_on_ButtonNext_pressed"]
